bindings/python/src/libsonare/_ffi_signatures_effects_engine.py

"""ctypes function signatures for libsonare."""
# ruff: noqa: F405

from __future__ import annotations

import ctypes

from ._ffi_types import *  # noqa: F403,F405


def configure_effects_engine_signatures(lib: ctypes.CDLL) -> None:
    # --- Effects ---

    # sonare_hpss
    lib.sonare_hpss.restype = ctypes.c_int32
    lib.sonare_hpss.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.POINTER(SonareHpssResult),
    ]

    # sonare_harmonic
    lib.sonare_harmonic.restype = ctypes.c_int32
    lib.sonare_harmonic.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_percussive
    lib.sonare_percussive.restype = ctypes.c_int32
    lib.sonare_percussive.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_time_stretch
    lib.sonare_time_stretch.restype = ctypes.c_int32
    lib.sonare_time_stretch.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_pitch_shift
    lib.sonare_pitch_shift.restype = ctypes.c_int32
    lib.sonare_pitch_shift.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_pitch_correct_to_midi
    lib.sonare_pitch_correct_to_midi.restype = ctypes.c_int32
    lib.sonare_pitch_correct_to_midi.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_pitch_correct_to_midi_timevarying
    if hasattr(lib, "sonare_pitch_correct_to_midi_timevarying"):
        lib.sonare_pitch_correct_to_midi_timevarying.restype = ctypes.c_int32
        lib.sonare_pitch_correct_to_midi_timevarying.argtypes = [
            ctypes.POINTER(ctypes.c_float),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_float),
            ctypes.POINTER(ctypes.c_float),
            ctypes.POINTER(ctypes.c_int32),
            ctypes.c_size_t,
            ctypes.c_int,
            ctypes.c_float,
            ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
            ctypes.POINTER(ctypes.c_size_t),
        ]

    # sonare_note_stretch
    lib.sonare_note_stretch.restype = ctypes.c_int32
    lib.sonare_note_stretch.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    # sonare_voice_change
    lib.sonare_voice_change.restype = ctypes.c_int32
    lib.sonare_voice_change.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_float,
        ctypes.c_float,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]
    lib.sonare_voice_change_realtime.restype = ctypes.c_int32
    lib.sonare_voice_change_realtime.argtypes = [
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.POINTER(ctypes.POINTER(ctypes.c_float)),
        ctypes.POINTER(ctypes.c_size_t),
    ]

    lib.sonare_realtime_voice_changer_create_json.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_create_json.argtypes = [
        ctypes.c_char_p,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.c_int,
        ctypes.POINTER(ctypes.c_void_p),
    ]
    if hasattr(lib, "sonare_realtime_voice_changer_preset_config"):
        lib.sonare_realtime_voice_changer_preset_config.restype = ctypes.c_int32
        lib.sonare_realtime_voice_changer_preset_config.argtypes = [
            ctypes.c_int,
            ctypes.POINTER(SonareRealtimeVoiceChangerConfig),
        ]
    if hasattr(lib, "sonare_realtime_voice_changer_create"):
        lib.sonare_realtime_voice_changer_create.restype = ctypes.c_int32
        lib.sonare_realtime_voice_changer_create.argtypes = [
            ctypes.POINTER(SonareRealtimeVoiceChangerConfig),
            ctypes.c_int,
            ctypes.c_int,
            ctypes.c_int,
            ctypes.POINTER(ctypes.c_void_p),
        ]
    if hasattr(lib, "sonare_realtime_voice_changer_set_config"):
        lib.sonare_realtime_voice_changer_set_config.restype = ctypes.c_int32
        lib.sonare_realtime_voice_changer_set_config.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareRealtimeVoiceChangerConfig),
        ]
    if hasattr(lib, "sonare_realtime_voice_changer_get_config"):
        lib.sonare_realtime_voice_changer_get_config.restype = ctypes.c_int32
        lib.sonare_realtime_voice_changer_get_config.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(SonareRealtimeVoiceChangerConfig),
        ]
    lib.sonare_realtime_voice_changer_destroy.restype = None
    lib.sonare_realtime_voice_changer_destroy.argtypes = [ctypes.c_void_p]
    lib.sonare_realtime_voice_changer_reset.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_reset.argtypes = [ctypes.c_void_p]
    lib.sonare_realtime_voice_changer_set_config_json.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_set_config_json.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.sonare_realtime_voice_changer_process_mono.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_process_mono.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_float),
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
    ]
    lib.sonare_realtime_voice_changer_process_interleaved.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_process_interleaved.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_float),
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
        ctypes.c_int,
    ]
    lib.sonare_realtime_voice_changer_process_planar_stereo.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_process_planar_stereo.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_float),
        ctypes.POINTER(ctypes.c_float),
        ctypes.c_size_t,
    ]
    lib.sonare_realtime_voice_changer_latency_samples.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_latency_samples.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_int),
    ]
    lib.sonare_realtime_voice_changer_config_json.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_config_json.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_char_p),
    ]
    lib.sonare_realtime_voice_changer_preset_names.restype = ctypes.c_char_p
    lib.sonare_realtime_voice_changer_preset_names.argtypes = []
    lib.sonare_voice_character_preset_id.restype = ctypes.c_char_p
    lib.sonare_voice_character_preset_id.argtypes = [ctypes.c_int]
    lib.sonare_realtime_voice_changer_preset_json.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_preset_json.argtypes = [
        ctypes.c_char_p,
        ctypes.POINTER(ctypes.c_char_p),
    ]
    lib.sonare_realtime_voice_changer_validate_preset_json.restype = ctypes.c_int32
    lib.sonare_realtime_voice_changer_validate_preset_json.argtypes = [
        ctypes.c_char_p,
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(ctypes.c_char_p),
    ]
